# intelscribe

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  install.ps1
crates/app/: Cargo.toml  tauri.conf.json
crates/app/capabilities/: default.json
crates/app/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: build_packs.rs  detect_probe.rs  extract_all.rs  ingest_demo.rs
crates/core/src/: autofill.rs  cvss.rs  extract.rs  frameworks.rs  lib.rs  lint.rs  model.rs  packs.rs  template.rs  theme.rs
crates/render/: Cargo.toml
crates/render/examples/: dump_pages.rs  dump_src.rs
crates/render/fixtures/: demo_engagement.json  demo_pentest.json
crates/render/src/: art.rs  doc.rs  docx.rs  lib.rs  world.rs
crates/render/tests/: sample_render.rs
docs/: IDEAS.md
packs/: acsc-categories.json  attack-full.json  ism.json  mitigations.json  technique-signatures.json
templates/: incident-report.toml  pentest-report.toml
themes/: collection.toml
tools/: make-icon.ps1  make-shortcut.ps1
ui/: app.js  index.html  styles.css
