[workspace]
resolver = "2"
members = ["crates/core", "crates/render", "crates/app"]

[workspace.package]
version = "2.0.0"
edition = "2021"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[profile.dev]
# Typst layout is slow in unoptimised builds; keep dependencies optimised.
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
