[package]
name = "intelscribe-app"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
intelscribe-core = { path = "../core" }
intelscribe-render = { path = "../render" }
tauri = { version = "2", features = [] }
serde = { workspace = true }
serde_json = { workspace = true }
rfd = "0.15"
zip = "2"
pdf-extract = "0.7"
sha2 = "0.10"
base64 = "0.22"
