[package]
name = "intelscribe-render"
version.workspace = true
edition.workspace = true

[dependencies]
intelscribe-core = { path = "../core" }
typst = "0.13"
typst-pdf = "0.13"
typst-render = "0.13"
typst-assets = { version = "0.13", features = ["fonts"] }
# Same tiny-skia version typst-render uses; the png-format feature gives us
# Pixmap::encode_png for the live preview.
tiny-skia = { version = "0.11", features = ["png-format"] }
base64 = "0.22"

[dev-dependencies]
serde_json = { workspace = true }
